# Lemonade

./: .gitignore  CMakeLists.txt
libraries/: SDL 2.0 LICENSE.txt  SDL2_image LICENSE.txt  libpng LICENSE.txt
libraries/include/glm/gtx/: component_wise.inl
libraries/include/newton/dAnimation/: CMakeLists.txt  dAnimationBlendTreeNode.cpp  dAnimationBlendTreeNode.h  dAnimationKeyframesTrack.cpp  dAnimationKeyframesTrack.h  dAnimationPose.cpp  dAnimationPose.h  dAnimationSequence.cpp  dAnimationSequence.h  dAnimationSequencePlayer.cpp  dAnimationSequencePlayer.h  dAnimationStdAfx.cpp  dAnimationStdAfx.h  dAnimationTwoWayBlend.cpp  dAnimationTwoWayBlend.h
libraries/include/newton/dContainers/: CMakeLists.txt  dArray.h  dBaseHierarchy.cpp  dBaseHierarchy.h  dBezierSpline.cpp  dBezierSpline.h  dCRC.cpp  dCRC.h  dClassInfo.cpp  dClassInfo.h  dContainersAlloc.cpp  dContainersAlloc.h  dContainersStdAfx.cpp  dContainersStdAfx.h  dHeap.h  dList.h  dMap.h  dPointer.h  dRefCounter.cpp  dRefCounter.h  dRtti.h  dString.cpp  dString.h  dTree.cpp  dTree.h
libraries/include/newton/dCustomJoints/: CMakeLists.txt  dCustomAlloc.cpp  dCustomAlloc.h  dCustomBallAndSocket.cpp  dCustomBallAndSocket.h  dCustomCorkScrew.cpp  dCustomCorkScrew.h  dCustomDoubleHinge.cpp  dCustomDoubleHinge.h  dCustomDoubleHingeActuator.cpp  dCustomDoubleHingeActuator.h  dCustomDryRollingFriction.cpp  dCustomDryRollingFriction.h  dCustomFixDistance.cpp  dCustomFixDistance.h  dCustomGear.cpp  dCustomGear.h  dCustomHinge.cpp  dCustomHinge.h  dCustomHingeActuator.cpp  dCustomHingeActuator.h  dCustomJoint.cpp  dCustomJoint.h  dCustomJointLibraryStdAfx.cpp  dCustomJointLibraryStdAfx.h  dCustomKinematicController.cpp  dCustomKinematicController.h  dCustomListener.cpp  dCustomListener.h  dCustomMotor.cpp  dCustomMotor.h  dCustomPathFollow.cpp  dCustomPathFollow.h  dCustomPlane.cpp  dCustomPlane.h  dCustomPulley.cpp  dCustomPulley.h  dCustomRackAndPinion.cpp  dCustomRackAndPinion.h  dCustomSixdof.cpp  (+13 more)
libraries/include/newton/dLanguageBinding/: lexical.cpp  lexical.h  newtonBinding.cpp  newtonBinding.h  newtonGrammar.cpp  newtonGrammar.h
libraries/include/newton/dMath/: CMakeLists.txt  dLinearAlgebra.cpp  dLinearAlgebra.h  dMathDefines.cpp  dMathDefines.h  dMatrix.cpp  dMatrix.h  dQuaternion.cpp  dQuaternion.h  dStdAfxMath.cpp  dStdAfxMath.h  dVector.cpp  dVector.h
libraries/include/newton/dModel/: CMakeLists.txt  dModelAnimTree.h  dModelAnimTreePose.h  dModelAnimTreePoseBlender.h  dModelManager.cpp  dModelManager.h  dModelNode.cpp  dModelNode.h  dModelRootNode.cpp  dModelRootNode.h  dModelStdAfx.cpp  dModelStdAfx.h
libraries/include/newton/dNewton/: CMakeLists.txt  dMaterialPairManager.cpp  dMaterialPairManager.h  dNewton.cpp  dNewton.h  dNewtonActuatorJoints.cpp  dNewtonActuatorJoints.h  dNewtonAlloc.cpp  dNewtonAlloc.h  dNewtonBody.cpp  dNewtonCollision.cpp  dNewtonCollision.h  dNewtonDynamicBody.cpp  dNewtonJoint.cpp  dNewtonJoint.h  dNewtonKinematicBody.cpp  dNewtonMaterial.cpp  dNewtonMesh.cpp  dNewtonMesh.h  dNewtonPlayerManager.cpp  dNewtonPlayerManager.h  dNewtonRayCast.cpp  dNewtonScopeBuffer.cpp  dNewtonTransformLerp.cpp  dNewtonTriggerManager.cpp  dNewtonTriggerManager.h  dStdAfxNewton.cpp  dStdAfxNewton.h
libraries/include/newton/dProfiler/: CMakeLists.txt  dProfiler.cpp  dProfiler.h  dllmain.cpp  imgui.ini
libraries/include/newton/dScene/: CMakeLists.txt  dAnimationTake.cpp  dAnimationTake.h  dAnimationTrack.cpp  dAnimationTrack.h  dBoneNodeInfo.cpp  dBoneNodeInfo.h  dCollisionBoxNodeInfo.cpp  dCollisionBoxNodeInfo.h  dCollisionCapsuleNodeInfo.cpp  dCollisionCapsuleNodeInfo.h  dCollisionChamferCylinderNodeInfo.cpp  dCollisionChamferCylinderNodeInfo.h  dCollisionCompoundNodeInfo.cpp  dCollisionCompoundNodeInfo.h  dCollisionConeNodeInfo.cpp  dCollisionConeNodeInfo.h  dCollisionConvexHullNodeInfo.cpp  dCollisionConvexHullNodeInfo.h  dCollisionCylinderNodeInfo.cpp  dCollisionCylinderNodeInfo.h  dCollisionNodeInfo.cpp  dCollisionNodeInfo.h  dCollisionSphereNodeInfo.cpp  dCollisionSphereNodeInfo.h  dCollisionTreeNodeInfo.cpp  dCollisionTreeNodeInfo.h  dDrawUtils.cpp  dGeometryNodeInfo.cpp  dGeometryNodeInfo.h  dGeometryNodeModifierInfo.cpp  dGeometryNodeModifierInfo.h  dGeometryNodeSkinClusterInfo.cpp  dGeometryNodeSkinClusterInfo.h  dLineNodeInfo.cpp  dLineNodeInfo.h  dMaterialNodeInfo.cpp  dMaterialNodeInfo.h  dMeshNodeInfo.cpp  dMeshNodeInfo.h  (+23 more)
libraries/include/newton/dVehicle/: CMakeLists.txt  dStdafxVehicle.cpp  dStdafxVehicle.h  dVehicle.cpp  dVehicle.h  dVehicleLoopJoint.cpp  dVehicleLoopJoint.h  dVehicleManager.cpp  dVehicleManager.h  dVehicleNode.cpp  dVehicleNode.h  dVehicleSolver.cpp  dVehicleSolver.h
libraries/include/newton/dgCore/: CMakeLists.txt  dg.cpp  dg.h  dgAABBPolygonSoup.cpp  dgAABBPolygonSoup.h  dgArray.h  dgCRC.cpp  dgCRC.h  dgConvexHull3d.cpp  dgConvexHull3d.h  dgConvexHull4d.cpp  dgConvexHull4d.h  dgDebug.cpp  dgDebug.h  dgDelaunayTetrahedralization.cpp  dgDelaunayTetrahedralization.h  dgFastQueue.h  dgGeneralMatrix.cpp  dgGeneralMatrix.h  dgGeneralVector.cpp  dgGeneralVector.h  dgGoogol.cpp  dgGoogol.h  dgGraph.h  dgHeap.h  dgIntersections.cpp  dgIntersections.h  dgList.h  dgMatrix.cpp  dgMatrix.h  dgMemory.cpp  dgMemory.h  dgMutexThread.cpp  dgMutexThread.h  dgNode.cpp  dgNode.h  dgObb.cpp  dgObb.h  dgPathFinder.h  dgPlane.h  (+36 more)
libraries/lib/Linux64/: libGLEW.so.2.0.0  libGLEW.so.2.2.0
libraries/lib/win64/: IrrXML.lib  assimp-vc143-mt.exp  assimp.lib  newton.lib  zlibstatic.lib
project/Lemonade/: Lemonade.sln  Lemonade.vcxproj  Lemonade.vcxproj.filters  vcpkg.json
source/: LCommon.h  Lemonade.h  LemonadeRE.cpp  LemonadeRE.h
source/Platform/Core/: LObject.h
source/Platform/OGL/: GLRenderBlock.cpp  GLRenderBlock.h
source/platform/core/: LObject.h
(+538 files in other folders)
